Project

General

Profile

Actions

Bug #5229

closed

[PATCH] thread.c (rb_thread_select): implement using rb_thread_fd_select

Bug #5229: [PATCH] thread.c (rb_thread_select): implement using rb_thread_fd_select

Added by normalperson (Eric Wong) about 15 years ago. Updated about 15 years ago.

Status:
Closed
Target version:
ruby -v:
ruby 1.9.4dev (2011-08-25 trunk 33057) [x86_64-linux]
Backport:
[ruby-core:39102]

Description

rb_thread_select() is deprecated, but should provide graceful
handling of interrupts for compatibility. rb_thread_fd_select()
provides graceful handling of interrupts and won't fail with
EINTR.

Added -ext- test case since no internal Ruby code paths uses
rb_thread_select() directly.

This is a regression from 1.9.2 and should be backported to 1.9.3, too


Files


Related issues 1 (0 open — 1 closed)

Related to Ruby - Bug #5251: Thread Change Breaks Windows BuildsClosedkosaki (Motohiro KOSAKI)Actions
Actions

Also available in: PDF Atom